# ProjectSpeccy

./: .gitignore  CMakeLists.txt  Instruction_Set_Z80.txt  README  display.cpp  display.h  icpu.h  imemory.h  iscreenmemory.h  keyboard.cpp  keyboard.h  main.cpp  myMakefile  oldsound.cpp  parp  render.cpp  render.h  sound.cpp  sound.h  z80.cpp  z80.h  zx82.htm  zxspectrum.cpp  zxspectrum.h
cmake/Modules/: FindGLFW.cmake  FindOpenAL.cmake  FindOpenGL.cmake
engine/common/: macros.h
engine/linux/common/: platform_types.h
engine/windows/common/: platform_types.h
roms/: 007Spy.raw  Fairlight - 48k - Release 2.tzx  LORDSMID.SNA  Lord Of The Rings - Side 2.tzx  Lord Of The Rings - Side 3.tzx  Lords Of Time.tzx  Magnetron.tzx  The Lords Of Midnight - Side 1.tzx  The Lords Of Midnight - Side 2.tzx  The Price Of Magik - Side 1.tzx  The Price Of Magik - Side 2.tzx  Trashman.tzx  Twin Kingdom Valley.tzx  Wheelie.tzx  z80tests.raw
tapes/: 3-D Monster Chase.tzx  Bubble Bobble.tzx  Doomdark's Revenge.tzx  Elite.tzx  Fairlight.tzx  Heartland.tzx  Leviathan.tzx  Lord Of The Rings - Side 1.tzx  Lord Of The Rings - Side 4.tzx  Ninja Hamster.tzx  Red Moon.tzx  SabreWulf.tzx  War In Middle Earth.tzx  android2.sna  hobbit.sna  tkv.tap
